# ProjekatOS

./: .gitignore  CMakeLists.txt  README.md  asm.c  asm.h  cpu.c  cpu.h  disk.c  disk.h  filesystem.c  filesystem.h  mem.c  mem.h  shell.c
src/start/: Asembler.java  CmdPrompt.java  CuvanjePodataka.java  Fajl.java  FajlSistem.java  Main.java  Memorija.java  Proces.java  ProcessThread.java  RasporedjivacProcesa.java  Shell.java  Stranica.java  Tred.java
src/start/podaci/: kod.asm  save
